fixed alignmnet

--- a/locpin/css/home.css
+++ b/locpin/css/home.css
@@ -65,11 +65,6 @@
     #img-buildings{
         max-width:400px;
     }
-
-
-.section-2-align{
-text-align:center !important;
-}
 }
 
 @media(max-device-width:500px){
@@ -112,7 +107,7 @@ text-align:center !important;
 }
 
 
-
+@media(min-device-width:733px){
 .section-2-cover{
     width: 100%;
     height: auto;
@@ -123,6 +118,49 @@ text-align:center !important;
     background-size: cover;
     -o-background-size: cover; 
 }
+.section-2-small-cover{
+    display:none;
+}
+.section-2-align{
+text-align:left;
+padding: 0 40px 20px 40px;
+}
+
+}
+
+
+@media(max-device-width:732px){
+.section-2-cover{
+    display:none;
+}
+
+.section-2-small-cover{
+    width: 100%;
+    height: auto;
+    padding: 20px 0;
+    text-align: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover; 
+}
+
+.section-2-align{
+text-align:center !important;
+}
+
+
+h2{font-size: 24px;line-height: 30px;}
+
+
+li{
+        font-size: 14px;
+        padding: 10px 0 0px 0;
+
+}
+
+}
+
 
 .section-3-cover{
     width: 100%;
@@ -163,6 +201,4 @@ font-size:20px;
 color:#A9A9A9;
 }
 
-.section-2-align{
-text-align:left;
-}
+
